; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/compress/extr_gzip.c_h2o_compress_gzip_open.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/compress/extr_gzip.c_h2o_compress_gzip_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.st_gzip_context_t = type { %struct.TYPE_3__, i32 }

@do_compress = common dso_local global i32 0, align 4
@Z_DEFLATED = common dso_local global i32 0, align 4
@WINDOW_BITS = common dso_local global i32 0, align 4
@Z_DEFAULT_STRATEGY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_3__* @h2o_compress_gzip_open(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.st_gzip_context_t*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.st_gzip_context_t* @gzip_open(i32* %6)
  store %struct.st_gzip_context_t* %7, %struct.st_gzip_context_t** %5, align 8
  %8 = load i32, i32* @do_compress, align 4
  %9 = load %struct.st_gzip_context_t*, %struct.st_gzip_context_t** %5, align 8
  %10 = getelementptr inbounds %struct.st_gzip_context_t, %struct.st_gzip_context_t* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  %12 = load %struct.st_gzip_context_t*, %struct.st_gzip_context_t** %5, align 8
  %13 = getelementptr inbounds %struct.st_gzip_context_t, %struct.st_gzip_context_t* %12, i32 0, i32 1
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @Z_DEFLATED, align 4
  %16 = load i32, i32* @WINDOW_BITS, align 4
  %17 = load i32, i32* @Z_DEFAULT_STRATEGY, align 4
  %18 = call i32 @deflateInit2(i32* %13, i32 %14, i32 %15, i32 %16, i32 8, i32 %17)
  %19 = load %struct.st_gzip_context_t*, %struct.st_gzip_context_t** %5, align 8
  %20 = getelementptr inbounds %struct.st_gzip_context_t, %struct.st_gzip_context_t* %19, i32 0, i32 0
  ret %struct.TYPE_3__* %20
}

declare dso_local %struct.st_gzip_context_t* @gzip_open(i32*) #1

declare dso_local i32 @deflateInit2(i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
